--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Codefolio"
         tools:targetApi="31" >
         <activity
-            android:name=".ProfileActivity"
+            android:name=".ProfileFragment"
             android:exported="false"
             android:label="@string/title_activity_profile"
             android:theme="@style/Theme.Codefolio" />
